Add more content sections as requested in issue #1

--- a/index.html
+++ b/index.html
@@ -33,13 +33,53 @@
         p {
             color: #666;
         }
+        .section {
+            margin-bottom: 30px;
+        }
+        .contact-info {
+            background-color: #f8f9fa;
+            padding: 15px;
+            border-radius: 4px;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
     <h1>Welcome to New Society</h1>
     <div class="content">
-        <h2>About Us</h2>
-        <p>We're building something amazing here!</p>
+        <div class="section">
+            <h2>About Us</h2>
+            <p>We're building something amazing here! New Society is a community-driven initiative to create positive change in our world.</p>
+        </div>
+
+        <div class="section">
+            <h2>Our Mission</h2>
+            <p>To foster innovation, collaboration, and sustainable development while building a more inclusive and equitable society for all.</p>
+        </div>
+
+        <div class="section">
+            <h2>Our Values</h2>
+            <ul>
+                <li>Transparency and accountability</li>
+                <li>Innovation and creativity</li>
+                <li>Inclusivity and diversity</li>
+                <li>Sustainable development</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Get Involved</h2>
+            <p>There are many ways to contribute to New Society. Whether you're a developer, designer, writer, or simply passionate about making a difference, we'd love to have you join us!</p>
+        </div>
+
+        <div class="section">
+            <h2>Contact Information</h2>
+            <div class="contact-info">
+                <p>Email: info@newsociety.org</p>
+                <p>Twitter: @NewSociety</p>
+                <p>GitHub: github.com/new-society</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
